# Conclave

./: .gitignore  PRD.md  README.md  mcp-config.example.json  pyproject.toml
conclave.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
conclave_server/: admin.py  db.py  notifications.py  schema.sql  server.py
skill/grill/: SKILL.md
skill/grill-me/: SKILL.md
