[project]
name = "conclave"
version = "0.1.0"
description = "Multi-stakeholder agent decision sessions over MCP"
requires-python = ">=3.11"
dependencies = ["fastmcp>=2.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["conclave_server*"]
